--- a/css/styles.css
+++ b/css/styles.css
@@ -67,3 +67,64 @@ nav li a:hover{
   display: flex;
   justify-content: space-between;
 }
+
+#hero {
+  background: url("../images/zebra-hero.jpg") no-repeat;
+  color: #fafafa;
+  text-align: center;
+  height: 350px;
+  padding: 25px 0;
+  /* border-radius: 50% */
+}
+
+#hero img {
+  width: 150px;
+  border-radius: 50%;
+  margin-top:  30px;
+}
+
+#hero h2 {
+  font-size: 400%;
+  margin: 10px;
+}
+
+#hero span {
+  border: 2px solid white;
+  padding: 10px 20px;
+  display: inline-block;
+  margin-top: 10px;
+  font-size: 150%;
+}
+
+#main-content {
+  text-align: center;
+  padding: 25px 0;
+  overflow: hidden;
+}
+
+#main-content h3 {
+  font-size:  250%;
+  margin: 20px 0;
+}
+
+.column {
+  padding: 15px;
+}
+
+.column img {
+  width: 70%;
+  max-width: 70%;
+  border-radius: 50%;
+  border: 5px solid #8a80c3;
+  margin-bottom: 20px;
+}
+
+.column .btn {
+  border: 2px solid #8a80c3;
+  padding: 10px 20px;
+  display: inline-block;
+  margin-top: 10px;
+  font-size: 150%;
+  text-decoration: none;
+  color: #8a80c3;
+}
